@@ -19,6 +19,7 @@ export(export.model)
 export(extract.indices)
 export(fill.covariates)
 export(find.covariates)
+export(find.possible.transitions)
 export(get.real)
 export(import.chdata)
 export(logitCI)
@@ -51,6 +52,7 @@ export(setup.parameters)
 export(store)
 export(summary.mark)
 export(summary_ch)
+export(transition.pairs)
 export(TransitionMatrix)
 export(var.components)
 export(var.components.reml)
