@@ -1,9 +1,14 @@
 \name{TransitionMatrix}
+\alias{find.possible.transitions}
+\alias{transition.pairs}
 \alias{TransitionMatrix}
-\title{Creates a transition matrix of movement parameters for a multi-state(strata)
-model}
+\title{Multi-state Transition Functions}
 \usage{
-  TransitionMatrix(x, vcv.real = NULL)
+  TransitionMatrix(x,vcv.real=NULL)
+
+  find.possible.transitions(ch)
+
+  transition.pairs(ch)
 }
 \arguments{
   \item{x}{Estimate table from \code{\link{get.real}} with
@@ -11,23 +16,54 @@ model}
 
   \item{vcv.real}{optional variance-covariance matrix from
   the call to \code{\link{get.real}}}
+
+  \item{ch}{vector of capture history strings for a
+  multi-state analysis}
 }
 \value{
-  Either a transition matrix (vcv.real=NULL) or a list of
-  matrices (vcv.real specified) named TransitionMat
-  (transition matrix), se.TransitionMat (se of each
-  transition), lcl.TransitionMat (lower confidence interval
-  limit for each transition), and ucl.TransitionMat (upper
-  confidence interval limit for each transition).
+  TransitionMatrix: returns either a transition matrix
+  (vcv.real=NULL) or a list of matrices (vcv.real
+  specified) named TransitionMat (transition matrix),
+  se.TransitionMat (se of each transition),
+  lcl.TransitionMat (lower confidence interval limit for
+  each transition), and ucl.TransitionMat (upper confidence
+  interval limit for each transition).
+  find.possible.transitions returns a 0/1 table where 1
+  means that t both values are in one or more ch strings
+  and transition.pairs returns a table of counts of
+  transition pairs.
 }
 \description{
-  Computes all Psi values for a multi-strata mark model and
+  TransitionMatrix: Creates a transition matrix of movement
+  parameters for a multi-state(strata) model. It computes
+  all Psi values for a multi-strata mark model and
   constructs a transition matrix.  Standard errors and
   confidence intervals can also be obtained.
 }
+\details{
+  find.possible.transitions: Finds possible transitions;
+  essentially it identifies where stratum label A and B are
+  in the same ch for all labels but the the transition
+  could be from A to B or B to A or even ACB which is
+  really an A to C and C to B transition.
+
+  transition.pairs: Computes counts of transition pairs.
+  The rows are the "from stratum" and the columns are the
+  "to stratum". So AB would be in the first row second
+  column and BA would be in the second row first column.
+  All intervening 0s are ignored. These are transition
+  pairs so AB0C is A to B and B to C but not A to C.
+}
 \examples{
-# fit the sequence of multistrata models as shown for ?mstrata
 data(mstrata)
+# Show possible transitions in first 15 ch values
+find.possible.transitions(mstrata$ch[1:15])
+# Show transtion pairs for same data
+transition.pairs(mstrata$ch[1:15])
+#limit transtions to 2 and 3 character values for first 30 ch
+transition.pairs(substr(mstrata$ch[1:30],2,3))
+
+# fit the sequence of multistrata models as shown for ?mstrata
 run.mstrata=function()
 {
 #
